Adaptador de clientes por cada encargado

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -11,7 +11,7 @@
     <string name="itemIdioma">Change Language</string>
     <string name="itemSalir">Exit</string>
     <string name="itemAyuda">Help</string>
-    <string name="labelRegistro">Regestry</string>
+    <string name="labelRegistro">Register</string>
     <string name="labelCedula">EC</string>
     <string name="labelNombres">Names</string>
     <string name="labelApellidos">Surnames</string>
